cartopy/docs/v0.16/_sources/gallery/star_shaped_boundary.rst.txt


.. _sphx_glr_gallery_star_shaped_boundary.py:


Modifying the boundary/neatline of a map in cartopy
---------------------------------------------------

This example demonstrates how to modify the boundary/neatline
of an axes. We construct a star with coordinates in a Plate Carree
coordinate system, and use the star as the outline of the map.

Notice how changing the projection of the map represents a *projected*
star shaped boundary.





.. image:: /gallery/images/sphx_glr_star_shaped_boundary_001.png
    :align: center





.. code-block:: python

    import matplotlib.path as mpath
    import matplotlib.pyplot as plt

    import cartopy.crs as ccrs


    def main():
        fig = plt.figure()
        ax = fig.add_axes([0, 0, 1, 1], projection=ccrs.PlateCarree())
        ax.coastlines()

        # Construct a star in longitudes and latitudes.
        star_path = mpath.Path.unit_regular_star(5, 0.5)
        star_path = mpath.Path(star_path.vertices.copy() * 80,
                               star_path.codes.copy())

        # Use the star as the boundary.
        ax.set_boundary(star_path, transform=ccrs.PlateCarree())

        plt.show()


    if __name__ == '__main__':
        main()

**Total running time of the script:** ( 0 minutes  0.051 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: star_shaped_boundary.py <star_shaped_boundary.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: star_shaped_boundary.ipynb <star_shaped_boundary.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
